--- a/package.json
+++ b/package.json
@@ -17,13 +17,26 @@
   },
   "homepage": "https://github.com/jsandroid/AgogeProject#readme",
   "dependencies": {
-    "gatsby": "^2.22.12",
-    "gatsby-image": "^2.4.5",
-    "gatsby-plugin-sharp": "^2.6.9",
-    "gatsby-source-filesystem": "^2.3.8",
-    "gatsby-transformer-sharp": "^2.5.3",
+    "acorn": "^6.4.1",
+    "fuse.js": "^5.2.3",
+    "gatsby": "^2.23.11",
+    "gatsby-image": "^2.4.13",
+    "gatsby-plugin-manifest": "^2.4.9",
+    "gatsby-plugin-react-helmet": "^3.3.2",
+    "gatsby-plugin-react-svg": "^3.0.0",
+    "gatsby-plugin-robots-txt": "^1.5.0",
+    "gatsby-plugin-sharp": "^2.6.4",
+    "gatsby-remark-copy-linked-files": "^2.3.6",
+    "gatsby-remark-images": "^3.3.4",
+    "gatsby-source-filesystem": "^2.3.4",
+    "gatsby-transformer-remark": "^2.8.18",
+    "gatsby-transformer-sharp": "^2.5.2",
     "react": "^16.13.1",
+    "react-animated-slider": "^2.0.0",
     "react-dom": "^16.13.1",
-    "react-icons": "^3.10.0"
+    "react-helmet": "^6.0.0",
+    "react-icons": "^3.10.0",
+    "react-refresh": "^0.8.2",
+    "typescript": ">=2.8.0"
   }
 }
