--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "homepage": "https://github.com/jsandroid/AgogeProject#readme",
   "dependencies": {
     "acorn": "^6.4.1",
+    "dot-prop": "^5.2.0",
+    "emailjs-com": "^2.6.3",
     "fuse.js": "^5.2.3",
     "gatsby": "^2.23.11",
     "gatsby-image": "^2.4.13",
