--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,13 +1,14 @@
-steps: 
-  - name: node:10.15.1 
-    entrypoint: yarn 
-    args: ["install"] 
-  - name: node:10.15.1 
-    entrypoint: yarn 
-    args: ["add", "firebase-tools"]
-  - name: node:10.15.1 
-    entrypoint: yarn 
-    args: ["build"] 
-  - name: "node:10.15.1" 
-    entrypoint: "./node_modules/.bin/firebase" 
-    args: ["deploy", "--project", "$PROJECT_ID", "--token", "$_TOKEN"]
+steps:
+- name: gcr.io/cloud-builders/gcloud
+  args:
+  - kms
+  - decrypt
+  - --ciphertext-file=.env.enc
+  - --plaintext-file=.env
+  - --location=global
+  - --keyring=myproject
+  - --key=cloudbuild-env
+# Insert other build steps here
+# Deploy
+- name: 'gcr.io/cloud-builders/npm'
+  args: ['run', 'deploy']
