--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,18 +1,58 @@
-steps:
-- name: gcr.io/cloud-builders/gcloud
-  args:
-  - kms
-  - decrypt
-  - --ciphertext-file=.env.enc
-  - --plaintext-file=.env
-  - --location=global
-  - --keyring=agoge-website-dev
-  - --key=cloudbuild-env
-# Insert other build steps here
-- name: node
-  entrypoint: npm
-  args: ['install']
-  
+steps: 
+# Install dependencies
+  - name: node:10.16.0
+    id: Installing dependencies...
+    entrypoint: npm
+    args: ["install"] 
+    waitFor: ["-"] # Begin immediately
+
+# Install Firebase   
+  - name: node:10.16.0 
+    id: Installing Firebase...
+    entrypoint: npm 
+    args: ["install", "firebase-tools"]
+    waitFor:
+      - Install dependencies...
+
+# Create file with env-variables
+  - name: node:10.16.0
+    id: Creating Envirnonment variables...
+    entrypoint: npm
+    args: ["run", "create-env"]
+    env:
+    - "CLIENT_EMAIL=${_CLIENT_EMAIL}"
+    - "PRIVATE_KEY=${_PRIVATE_KEY}"
+    - "MAIL_CHIMP=${_MAIL_CHIMP}"
+    - "GA_ID=${_GA_ID}"
+    - "GA_VIEW_ID=${_GA_VIEW_ID}"
+    - "IG_TOKEN=${_IG_TOKEN}"
+    - "FIREBASE_API_KEY=${_FIREBASE_API_KEY}"
+    - "FIREBASE_APP_ID=${_FIREBASE_APP_ID}"
+    - "FIREBASE_AUTH_DOMAIN=${_FIREBASE_AUTH_DOMAIN}"
+    - "FIREBASE_DB_URL=${_FIREBASE_DB_URL}"
+    - "FIREBASE_MEASUREMENT_ID=${_FIREBASE_MEASUREMENT_ID}"
+    - "FIREBASE_MESSAGE_SENDER_ID=${_FIREBASE_MESSAGE_SENDER_ID}"
+    - "FIREBASE_PROJECT_ID=${_FIREBASE_PROJECT_ID}"
+    - "FIREBASE_STORAGE_BUCKET=${_FIREBASE_STORAGE_BUCKET}"
+    - "GATSBY_EXPERIMENTAL_PAGE_BUILD_ON_DATA_CHANGES=true"
+    waitFor: ["-"] # Begin immediately
+
+# Gatsby build
+  - name: node:10.16.0
+    id: Building Gatsby site...
+    entrypoint: npm
+    args: ["run", "build"]
+    waitFor:
+      - Installing dependencies...
+      - Creating Envirnonment variables...
+
 # Deploy
-- name: gcr.io/agoge-project-website/firebase
-      args: ['deploy', '--project=agoge-project-website', '--only=hosting']
+  - name: node:10.16.0 
+    id: Deploying to Firebase...
+    entrypoint: "./node_modules/.bin/firebase" 
+    args: ["deploy", "--project", "$PROJECT_ID", "--token", "$_TOKEN"]
+    waitFor:
+      - Installing Firebase...
+      - Building Gatsby site...
+    
+timeout: 30m0s
