--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -50,7 +50,7 @@ steps:
   - name: node:10.16.0 
     id: Deploying to Firebase...
     entrypoint: "./node_modules/.bin/firebase" 
-    args: ["deploy", "--project", "$PROJECT_ID", "--token", "$_TOKEN"]
+    args: ["deploy", "--project", "agoge-project-website", "--token", "$_TOKEN"]
     waitFor:
       - Installing Firebase...
       - Building Gatsby site...
