--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "deploy": "firebase deploy --debug --token \"$FIREBASE_TOKEN\""
+    "build": "gatsby build"
   },
   "repository": {
     "type": "git",
